test/boolVectorLength.slq
def fun[n:!ğ”¹](x:ğ”¹^n)â‡’x;

def main(){
	x:=fun(0:ğ”¹,1:ğ”¹); // error
	y:=fun(); // TODO?
	z:=fun(0:ğ”¹,); // TODO?
	return (x,y,z);
}
